force-app/main/default/objects/AI_Pricing_Rule__c/AI_Pricing_Rule__c.object-meta.xml
<CustomObject>
    <description>Defines pricing rules using structured natural language conditions and formulas. Each rule is bound to a Product2.ProductCode and evaluated by the AI engine during quote generation.</description>
    <label>AI Pricing Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Pricing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>