force-app/main/default/objects/AI_Pricing_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this rule is ignored by the AI engine during quote processing.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>