force-app/main/default/objects/AI_Pricing_Rule__c/fields/Condition_Text__c.field-meta.xml
<CustomField>
    <fullName>Condition_Text__c</fullName>
    <description>Structured natural language condition that defines WHEN this pricing rule applies. Human-readable and LLM-parseable. Example: WHEN {Quantity} >= 100 AND {Account.Type} = 'Enterprise'</description>
    <label>Condition Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>