force-app/main/default/objects/AI_Pricing_Rule__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Date from which this pricing rule is active. Rules outside effective date range are ignored.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>