force-app/main/default/objects/AI_Pricing_Rule__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date after which this pricing rule expires and is no longer applied.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>