force-app/main/default/objects/AI_Pricing_Rule__c/fields/Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text__c</fullName>
    <description>Structured natural language formula defining HOW price is calculated when condition is met. Supports tiered pricing, percentage adjustments, and minimum price floors.</description>
    <label>Formula Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>