force-app/main/default/objects/AI_Pricing_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Rule evaluation order. Lower number = higher priority. When multiple rules match, highest priority rule wins.</description>
    <label>Priority</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>