force-app/main/default/objects/AI_Pricing_Rule__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Product2.ProductCode this rule applies to. Use wildcard '*' for category-wide rules or comma-separated codes for multi-product rules.</description>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>