force-app/main/default/objects/AI_Pricing_Rule__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <description>Category of pricing rule for organisation and filtering.</description>
    <label>Rule Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Volume Pricing</fullName><default>false</default><label>Volume Pricing</label></value>
            <value><fullName>Enterprise Pricing</fullName><default>false</default><label>Enterprise Pricing</label></value>
            <value><fullName>Tiered Pricing</fullName><default>false</default><label>Tiered Pricing</label></value>
            <value><fullName>Promotional Pricing</fullName><default>false</default><label>Promotional Pricing</label></value>
            <value><fullName>Cost Plus</fullName><default>false</default><label>Cost Plus</label></value>
            <value><fullName>Custom</fullName><default>true</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>